- MFH suppression of compiler warning noted in bug #55009